# serena-monorepo

./: .dockerignore  .env.coolify.example  .env.example  .eslintrc.json  .gitignore  ARCHITECTURE_STUDY.md  CONVERSION_ENGINE.md  Makefile  README.md  TODO.md  bun-workspace.yaml  docker-compose.coolify.yml  docker-compose.prod.yml  docker-compose.yml  package.json
fastapi-brain/: .dockerignore  .env.example  Dockerfile  pyproject.toml
fastapi-brain/app/: main.py
fastapi-brain/app/config/: settings.py
fastapi-brain/app/lib/: limiter.py  openai_client.py
fastapi-brain/app/middleware/: auth.py
fastapi-brain/app/models/: requests.py  responses.py
fastapi-brain/app/routes/: classify.py  converse.py  decide.py  generate.py  health.py  insights.py  products.py
fastapi-brain/app/services/: classifier.py  converse_prompt_builder.py  decision.py  llm.py  objection_index.py  observations.py  product.py  prompt_builder.py  prompt_sections.py  signals.py  speech_prompt_builder.py  tactics.py  tools.py
fastapi-brain/app/utils/: embeddings.py  errors.py  logger.py
fastapi-brain/data/: objection_seed.jsonl
fastapi-brain/eval/: scenarios.jsonl
fastapi-brain/tests/integration/: test_classify.py  test_generate.py
fastapi-brain/tests/unit/: test_classifier_modes.py  test_converse_prompt_builder.py  test_converse_route.py  test_decision.py  test_llm_observation_loop.py  test_llm_pooled_client.py  test_objection_index.py  test_observations.py  test_openai_client.py  test_prompt_builder.py  test_prompt_sections.py  test_signals.py  test_speech_prompt_builder.py  (+1 more)
(+188 files in other folders)
