[project]
name = "fastapi-brain"
version = "0.1.0"
description = "Voice AI sales agent brain — classifier + prompt builder + LLM"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.136.0",
    "httpx>=0.28.1",
    "openai>=1.0",
    "pinecone>=6.0.0",
    "prisma>=0.15.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
